kubernetes-networks/canary-ns-and-pods.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test1
---
apiVersion: v1
kind: Pod
metadata:
  namespace: test1
  name: web
  labels:
    app: test1
spec:
  containers:
    - name: web
      image: fl64/otus-k8s-nginx
      volumeMounts:
      - name: app
        mountPath: /app
  volumes:
  - name: app
    emptyDir: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: test2
---
apiVersion: v1
kind: Pod
metadata:
  namespace: test2
  name: web
  labels:
    app: test2
spec:
  containers:
    - name: web
      image: fl64/otus-k8s-nginx
      volumeMounts:
      - name: app
        mountPath: /app
  volumes:
  - name: app
    emptyDir: {}
