kubernetes-networks/canary-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: test1
spec:
  selector:
    app: test1
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: test2
spec:
  selector:
    app: test2
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
