kubernetes-networks/canary-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels: 
    app: test1
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  namespace: test1
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-svc
          servicePort: 8000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels: 
    app: test2
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: canary
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
  namespace: test2
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-svc
          servicePort: 8000
